# Constitutional-Querying

./: README.md  indian_constitution.json  main.py  pyproject.toml  rag_pipeline.py  rag_pipeline_hybrid_search.py  requirements.txt
faiss_constitution_index/: index.faiss  index.pkl
